--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,22 @@ html,body {
   margin-bottom: 0.8rem;
 }
 
+a, button, input, label {
+  -webkit-tap-highlight-color: rgba(0,0,0,0.1); /* легкий эффект при касании */
+  touch-action: manipulation; /* чтобы избежать задержек */
+}
+
+button, a, .clickable {
+  transition: all 0.2s ease;
+}
+
+button:active,
+a:active,
+.clickable:active {
+  transform: scale(0.97);
+  opacity: 0.8;
+}
+
 @layer base {
   html {
    
