figure aspect ratio

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,8 +12,20 @@ html,body {
   font-display: swap;
 }
 
-.article p,figure {
+.article p {
   margin-bottom: 0.8rem;
+}
+figure {
+  aspect-ratio: 4 / 3;
+  position: relative;
+  margin-bottom: 0.8rem;
+}
+
+figure img{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 a, button, input, label {
